Fixed rejection align the input and button in row

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,11 @@ footer {
   color: white;
 }
 label {
-  margin-top: 10px;
+  padding-top: 15px;
+  text-align: center;
+  display: block;
+  font-size: 32px;
+  color: white;
 }
 input {
   text-align: center;
@@ -44,11 +48,6 @@ input {
   padding: 10px;
   border-radius: 20px;
   border: none;
-}
-.buttonBox {
-  width: 80vw;
-  margin: auto;
-  text-align: right;
 }
 button {
   font-size: 20px;
@@ -59,7 +58,7 @@ button {
   border: none;
   cursor: pointer;
 }
-li{
+li {
   text-align: center;
   font-size: 40px;
   color: white;
@@ -67,7 +66,12 @@ li{
   margin: 5px;
   padding: 2px;
 }
-.todolist{
+.todolist {
   overflow: auto;
   height: 50vh;
+}
+.flex {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
 }
